--- a/requirements.txt
+++ b/requirements.txt
@@ -1,245 +1,141 @@
-acvl-utils==0.2
-alabaster==0.7.16
-annotated-types==0.7.0
-anyio==4.2.0
-app-model==0.2.7
-appdirs==1.4.4
+adjustText==1.2.0
+ansicolors==1.1.8
+anyio==4.6.2.post1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
-attrs==23.1.0
-Babel==2.14.0
-batchgenerators==0.25
-beautifulsoup4==4.12.2
+attrs==24.2.0
+babel==2.16.0
+beautifulsoup4==4.12.3
 bleach==6.1.0
-build==1.2.1
-cachey==0.2.1
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
-cloudpickle==3.0.0
-comm==0.2.0
-connected-components-3d==3.12.4
-contourpy==1.2.0
-coverage==7.4.0
-cryptography==41.0.7
+comm==0.2.2
+contourpy==1.3.0
+coverage==7.6.3
 cycler==0.12.1
-dask==2024.6.2
-debugpy==1.8.0
+debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
-dicom2nifti==2.4.10
-docstring_parser==0.16
-docutils==0.21.2
-dynamic-network-architectures==0.2
 entrypoints==0.4
-exceptiongroup==1.2.0
-executing==2.0.1
-fastjsonschema==2.19.0
-filelock==3.13.1
-flexcache==0.3
-flexparser==0.3.1
-fonttools==4.47.0
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+fonttools==4.54.1
 fqdn==1.5.1
-freetype-py==2.4.0
-fsspec==2023.12.2
-future==0.18.3
-graphviz==0.20.1
-HeapDict==1.0.1
-hsluv==5.0.4
-idna==3.6
-imagecodecs==2024.1.1
-imageio==2.33.1
-imagesize==1.4.1
-importlib-metadata==7.0.1
-in-n-out==0.2.1
-ipykernel==6.27.1
-ipython==8.18.1
-ipywidgets==8.1.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+idna==3.10
+imageio==2.36.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.28.0
+ipywidgets==8.1.5
 isoduration==20.11.0
-jaraco.classes==3.3.0
 jedi==0.19.1
-jeepney==0.8.0
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-jupyter==1.0.0
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
 jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.5.1
-jupyter_server==2.12.1
-jupyter_server_terminals==0.5.0
-jupyterlab==4.0.9
-jupyterlab-widgets==3.0.9
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-keyring==24.3.0
-keyrings.alt==5.0.0
-kiwisolver==1.4.5
-lazy_loader==0.3
-linecache2==1.0.0
-littleutils==0.2.2
-llvmlite==0.43.0
-locket==1.0.0
-lxml==5.1.0
-magicgui==0.8.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.7
+lazy_loader==0.4
+MarkupSafe==3.0.1
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
 medutils==0.1.21
 mistune==3.0.2
-more-itertools==10.2.0
-mpmath==1.3.0
-napari==0.4.19.post1
-napari-console==0.0.9
-napari-plugin-engine==0.2.0
-napari-plugin-manager==0.1.0a2
-napari-svg==0.2.0
-nbclient==0.9.0
-nbconvert==7.13.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==3.2.1
-nibabel==5.2.0
--e git+https://github.com/MIC-DKFZ/nnUNet.git@fa552d33b87d74b2b548aabb3fe77db575b4c285#egg=nnunetv2
-notebook==7.0.6
-notebook_shim==0.2.3
-npe2==0.7.6
-numba==0.60.0
-numpy==1.26.2
-numpydoc==1.7.0
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
-outdated==0.2.2
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.1
+nibabel==5.3.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numpy==2.1.2
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.3
 pandas-flavor==0.6.0
-pandocfilters==1.5.0
-papermill==2.5.0
+pandocfilters==1.5.1
+papermill==2.6.0
 parameterized==0.9.0
-parso==0.8.3
-partd==1.4.2
+parso==0.8.4
 patsy==0.5.6
 pexpect==4.9.0
-Pillow==10.1.0
-pingouin==0.5.3
-Pint==0.24.1
-platformdirs==4.1.0
-pooch==1.8.2
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-psutil==5.9.7
-psygnal==0.11.1
+pillow==11.0.0
+pingouin==0.5.5
+platformdirs==4.3.6
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+psutil==6.1.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyconify==0.1.6
-pycparser==2.21
-pydantic==2.7.4
-pydantic-compat==0.1.2
-pydantic_core==2.18.4
-pydicom==2.4.4
-Pygments==2.17.2
-pyicloud==1.0.0
-PyOpenGL==3.1.7
-pyparsing==3.1.1
-pyproject_hooks==1.1.0
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-PyQt6==6.7.0
-PyQt6-Qt6==6.7.2
-PyQt6-sip==13.6.0
-PySimpleGUI==4.60.5
-python-dateutil==2.8.2
-python-gdcm==3.0.23
+pure_eval==0.2.3
+pyasn1==0.6.1
+pycparser==2.22
+Pygments==2.18.0
+pyparsing==3.2.0
+PySimpleGUI==5.0.6
+python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-referencing==0.32.0
-requests==2.31.0
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.15.2
-scikit-image==0.22.0
-scikit-learn==1.3.2
-scipy==1.11.4
-seaborn==0.13.1
-SecretStorage==3.3.3
-seg_metrics==1.2.7
-Send2Trash==1.8.2
-shellingham==1.5.4
-SimpleITK==2.3.1
+rpds-py==0.20.0
+rsa==4.9
+scikit-image==0.24.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+seg_metrics==1.2.8
+Send2Trash==1.8.3
+SimpleITK==2.4.0
 six==1.16.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-soupsieve==2.5
-Sphinx==7.3.7
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.5
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.7
-sphinxcontrib-serializinghtml==1.1.10
+sniffio==1.3.1
+soupsieve==2.6
 stack-data==0.6.3
-statsmodels==0.14.1
-superqt==0.6.7
-sympy==1.12
+statsmodels==0.14.4
 tabulate==0.9.0
-tenacity==8.2.3
-terminado==0.18.0
-threadpoolctl==3.2.0
-tifffile==2023.12.9
-tinycss2==1.2.1
-tomli==2.0.1
-tomli_w==1.0.0
-toolz==0.12.1
-torch==2.2.0
-tornado==6.4
-tqdm==4.66.1
-traceback2==1.4.0
-traitlets==5.14.0
-triangle==20230923
-triton==2.2.0
-typer==0.12.3
-types-python-dateutil==2.8.19.14
-typing_extensions==4.9.0
-tzdata==2023.4
-tzlocal==5.2
-unittest2==1.1.0
+tenacity==9.0.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2024.9.20
+tinycss2==1.3.0
+tomli==2.0.2
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+tzdata==2024.2
 uri-template==1.3.0
-urllib3==2.1.0
-vispy==0.14.3
-wcwidth==0.2.12
-webcolors==1.13
+urllib3==2.2.3
+wcwidth==0.2.13
+webcolors==24.8.0
 webencodings==0.5.1
-websocket-client==1.7.0
-widgetsnbextension==4.0.9
-wrapt==1.16.0
-xarray==2023.12.0
-yacs==0.1.8
-zipp==3.17.0
+websocket-client==1.8.0
+widgetsnbextension==4.0.13
+xarray==2024.9.0
